[gd_scene load_steps=5 format=3 uid="uid://ban324jsr1t4v"]

[ext_resource type="Texture2D" uid="uid://bhvp1ivtlu82w" path="res://Gravity.png" id="1_ugb0e"]
[ext_resource type="Script" uid="uid://bch2j5r50d6ne" path="res://gravity.gd" id="2_1jvu3"]
[ext_resource type="Texture2D" uid="uid://ourqpjxahytk" path="res://Gravity2.png" id="3_x0ysy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kif4i"]
radius = 58.5

[node name="Gravity" type="Area2D" groups=["gravity"]]
z_index = 5
script = ExtResource("2_1jvu3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1.03)
shape = SubResource("CircleShape2D_kif4i")

[node name="Sprite1" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_ugb0e")

[node name="Sprite2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.02, 1.02)
texture = ExtResource("3_x0ysy")
offset = Vector2(0, -3)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
